<resources>
    // MAIN PAGE TEXT
    <string name="app_name">Tennis Tracker Pro</string>
    <string name="main_title">Tennis\nTracker Pro</string>
    <string name="tennis_tracker_icon_descipt">Tennis Tracker Icon</string>
    <string name="new_match">New match</string>
    <string name="clipboard_image">Clipboard image</string>
    <string name="match_history">Match History</string>
    <string name="line_graphic_image">Line graphic image</string>
    <string name="statistics">Statistics</string>
    <string name="top_bar_image">Top bar image</string>

    // MATCH HISTORY
    <string name="match_history_title">MATCH\nHISTORY</string>
    <string name="options">Options</string>
    <string name="filter">Filter: </string>
    <string name="opponent">Opponent</string>
    <string name="triangle_down_img">Triangle down img</string>
    <string name="remove_set">Remove set</string>
    <string name="set_4">Set #4</string>
    <string name="set_8">Set #8</string>
    <string name="set_10">Set #10</string>
    <string name="set_9">Set #9</string>

    // ADD MATCH
    <string name="add_match">Add\nMatch</string>
    <string name="you">You</string>
    <string name="zero">0</string>
    <string name="cancel">Cancel</string>
    <string name="opponent_s_name">Opponent\'s name</string>
    <string name="court_opt">Court (opt)</string>
    <string name="calendar_img">Calendar img</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="pick_date">Pick date</string>
    <string name="score">Score</string>
    <string name="plus_button_img">Plus button img</string>
    <string name="minus_button_image">Minus button image</string>
    <string name="sets_opt">Sets (opt)</string>
    <string name="tennis_player_img">Tennis player img</string>
    <string name="court_img">Court img</string>
    <string name="set_1">Set #1</string>
    <string name="set_2">Set #2</string>
    <string name="set_3">Set #3</string>
    <string name="add_set">Add set</string>
    <string name="save_match">Save match</string>
    <string name="edit_match">Edit\nMatch</string>
    <string name="not_recorded">Not recorded</string>

    // STATISTICS
    <string name="statistics_title">STATISTICS</string>
    <string name="matches_won">Matches won</string>
    <string name="matches_lost">Matches lost</string>
    <string name="total_matches_played">Total matches played</string>
    <string name="fifty_perc">50%</string>
    <string name="sets_won">Sets won</string>
    <string name="sets_lost">Sets lost</string>
    <string name="courts">Courts</string>
    <string name="won_vs_lost">Won vs Lost</string>
    <string name="opponents">Opponents</string>
    <string name="total_games_played">Total games played</string>
    <string name="games_won">Games won</string>
    <string name="games_lost">Games lost</string>
    <string name="matches_won_to_lost">Matches won to lost</string>
    <string name="one">1.00</string>
    <string name="sets_won_to_lost">Sets won to lost</string>
    <string name="games_won_to_lost">Games won to lost</string>
    <string name="ratios">Ratios</string>
    <string name="set_5">Set #5</string>
    <string name="set_6">Set #6</string>
    <string name="set_7">Set #7</string>
    <string name="save_edit">Save edit</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>


</resources>
