<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activities.MatchHistory"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_bar_v2"
        android:transitionName="topBarTransition"
        android:contentDescription="@string/top_bar_image" />

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/match_history_title"
        android:textAlignment="textEnd"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/optBtn"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/options"
        android:onClick="exportBtnClicked"
        app:layout_constraintBottom_toTopOf="@+id/activityTitle"
        app:layout_constraintEnd_toEndOf="@+id/activityTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_points_grey" />

    <LinearLayout
        android:id="@+id/exportDataBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/off_white_bckg_small_radius"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/activityTitle"
        app:layout_constraintEnd_toEndOf="@+id/activityTitle"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/exportDataTxtBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="exportMatchesClicked"
            android:paddingVertical="4dp"
            android:paddingStart="12dp"
            android:paddingEnd="8dp"
            android:text="Export data"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/optBtnClicked"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/options"
            android:onClick="optBtnClickedHide"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/activityTitle"
            app:layout_constraintEnd_toEndOf="@+id/activityTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_points_grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/activityTitle"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/filter" />

        <Spinner
            android:id="@+id/spinnerOpponentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/statisticsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow_landing"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/line_graphic_image"
                app:srcCompat="@drawable/ic_graph_black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/statistics"
                android:textColor="@color/colorTextBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/newMatchLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow_landing"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/new_match"
                app:srcCompat="@drawable/ic_plus_black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_match"
                android:textColor="@color/colorTextBlack"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchHistoryList"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>