<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="false"
    tools:context=".AddMatch">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/top_bar_image"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_bar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/add_match"
        android:textAlignment="textEnd"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/oppNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_square_white"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_player_black" />

        <EditText
            android:id="@+id/opponentsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="4"
            android:backgroundTint="@color/colorTextGrey"
            android:ems="10"
            android:hint="Opponent's name"
            android:inputType="textPersonName"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorTextBlack"
            android:textColorHint="@color/colorTextGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/courtNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_square_white"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oppNameLayout">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp"
            app:srcCompat="@drawable/ic_court_black" />

        <EditText
            android:id="@+id/courtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="4"
            android:backgroundTint="@color/colorTextGrey"
            android:ems="0"
            android:hint="Court (opt)"
            android:inputType="textPersonName"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorTextBlack"
            android:textColorHint="@color/colorTextGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_square_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courtNameLayout">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp"
            app:srcCompat="@drawable/ic_calendar_black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Date"
            android:textColor="@color/colorTextGrey"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="Today"
            android:textColor="@color/primaryColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="Pick date"
            android:textColor="@color/primaryColor"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Score"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLayout" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13"
        app:srcCompat="@color/primaryColorLight" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="You"
        android:textAlignment="center"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yourScoreLayout"
        app:layout_constraintStart_toStartOf="@+id/yourScoreLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/opponent"
        android:textAlignment="center"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/yourScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">


        <ImageView
            android:id="@+id/minusBtnYou"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/plus_btn"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_minus_white" />

        <TextView
            android:id="@+id/yourScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/plusBtnYou"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/plus_btn"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_plus_white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yourScoreLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView12">


        <ImageView
            android:id="@+id/minusBtnOpp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/plus_btn"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_minus_white" />

        <TextView
            android:id="@+id/oppScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/plusBtnOpp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/plus_btn"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_plus_white" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Sets (opt)"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>